--- a/Travell/vite-project/src/app.css
+++ b/Travell/vite-project/src/app.css
@@ -98,7 +98,13 @@
     align-items: center;
     justify-content: center;
     text-align: center;
+    transform: translateY(-300px);
+    margin-left:40%;
+   
+}
+.img{
     width: 100%;
-    height: 100vh;
- 
+    height: 100%;
+    padding: 20px 0px;
+
 }
