--- a/Travell/vite-project/src/app.css
+++ b/Travell/vite-project/src/app.css
@@ -122,8 +122,7 @@
    
 } 
   .imgg .img{
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-
+ width: 100%;
+ height: 100vh;
+ position: relative;
 }
