--- a/Travell/vite-project/src/app.css
+++ b/Travell/vite-project/src/app.css
@@ -8,8 +8,8 @@
     scroll-behavior: smooth;
     font-family: 'Work-serif' sans-serif;
     box-sizing: border-box;
-    background-color: black;
-    color: white;
+    background-color: white;
+    color: black;
 
 }
 .container{
