--- a/Travell/src/index.css
+++ b/Travell/src/index.css
@@ -1,4 +1,4 @@
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
@@ -44,4 +44,4 @@ background: transparent;
         background:rgb(171, 99, 171) !important ;
         border-radius: 6px;}
         
-}
+} */
